piano.output
Terminals which are not used

   INTEGER


State 1 conflicts: 8 shift/reduce, 9 reduce/reduce
State 8 conflicts: 7 shift/reduce, 1 reduce/reduce
State 10 conflicts: 1 shift/reduce
State 11 conflicts: 7 shift/reduce, 12 reduce/reduce
State 12 conflicts: 6 shift/reduce
State 27 conflicts: 8 shift/reduce, 9 reduce/reduce
State 28 conflicts: 8 shift/reduce, 9 reduce/reduce
State 30 conflicts: 8 shift/reduce, 9 reduce/reduce


Grammar

    0 $accept: song $end

    1 song: song stmt END
    2     | song stmt
    3     | /* empty */

    4 stmt: expr stmt
    5     | '^' '(' song ')'
    6     | '_' '(' song ')'
    7     | '[' stmt ']'
    8     | /* empty */

    9 expr: note expr
   10     | note '-'
   11     | note '-' '-'
   12     | note '-' '-' '-'
   13     | '(' expr ')' '-'
   14     | '(' expr ')' '-' '-'
   15     | '(' expr ')' '-' '-' '-'
   16     | VARIABLE '=' song ';'
   17     | '$' VARIABLE
   18     | /* empty */

   19 note: NOTE
   20     | '_' NOTE
   21     | '^' NOTE


Terminals, with rules where they appear

$end (0) 0
'$' (36) 17
'(' (40) 5 6 13 14 15
')' (41) 5 6 13 14 15
'-' (45) 10 11 12 13 14 15
';' (59) 16
'=' (61) 16
'[' (91) 7
']' (93) 7
'^' (94) 5 21
'_' (95) 6 20
error (256)
NOTE (258) 19 20 21
VARIABLE (259) 16 17
INTEGER (260)
END (261) 1


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
song (18)
    on left: 1 2 3, on right: 0 1 2 5 6 16
stmt (19)
    on left: 4 5 6 7 8, on right: 1 2 4 7
expr (20)
    on left: 9 10 11 12 13 14 15 16 17 18, on right: 4 9 13 14 15
note (21)
    on left: 19 20 21, on right: 9 10 11 12


state 0

    0 $accept: . song $end

    $default  reduce using rule 3 (song)

    song  go to state 1


state 1

    0 $accept: song . $end
    1 song: song . stmt END
    2     | song . stmt

    $end      shift, and go to state 2
    NOTE      shift, and go to state 3
    VARIABLE  shift, and go to state 4
    '^'       shift, and go to state 5
    '('       shift, and go to state 6
    '_'       shift, and go to state 7
    '['       shift, and go to state 8
    '$'       shift, and go to state 9

    $end      [reduce using rule 8 (stmt)]
    $end      [reduce using rule 18 (expr)]
    NOTE      [reduce using rule 8 (stmt)]
    NOTE      [reduce using rule 18 (expr)]
    VARIABLE  [reduce using rule 8 (stmt)]
    VARIABLE  [reduce using rule 18 (expr)]
    END       reduce using rule 8 (stmt)
    END       [reduce using rule 18 (expr)]
    '^'       [reduce using rule 8 (stmt)]
    '^'       [reduce using rule 18 (expr)]
    '('       [reduce using rule 8 (stmt)]
    '('       [reduce using rule 18 (expr)]
    '_'       [reduce using rule 8 (stmt)]
    '_'       [reduce using rule 18 (expr)]
    '['       [reduce using rule 8 (stmt)]
    '['       [reduce using rule 18 (expr)]
    '$'       [reduce using rule 8 (stmt)]
    '$'       [reduce using rule 18 (expr)]
    $default  reduce using rule 8 (stmt)

    stmt  go to state 10
    expr  go to state 11
    note  go to state 12


state 2

    0 $accept: song $end .

    $default  accept


state 3

   19 note: NOTE .

    $default  reduce using rule 19 (note)


state 4

   16 expr: VARIABLE . '=' song ';'

    '='  shift, and go to state 13


state 5

    5 stmt: '^' . '(' song ')'
   21 note: '^' . NOTE

    NOTE  shift, and go to state 14
    '('   shift, and go to state 15


state 6

   13 expr: '(' . expr ')' '-'
   14     | '(' . expr ')' '-' '-'
   15     | '(' . expr ')' '-' '-' '-'

    NOTE      shift, and go to state 3
    VARIABLE  shift, and go to state 4
    '^'       shift, and go to state 16
    '('       shift, and go to state 6
    '_'       shift, and go to state 17
    '$'       shift, and go to state 9

    $default  reduce using rule 18 (expr)

    expr  go to state 18
    note  go to state 12


state 7

    6 stmt: '_' . '(' song ')'
   20 note: '_' . NOTE

    NOTE  shift, and go to state 19
    '('   shift, and go to state 20


state 8

    7 stmt: '[' . stmt ']'

    NOTE      shift, and go to state 3
    VARIABLE  shift, and go to state 4
    '^'       shift, and go to state 5
    '('       shift, and go to state 6
    '_'       shift, and go to state 7
    '['       shift, and go to state 8
    '$'       shift, and go to state 9

    NOTE      [reduce using rule 18 (expr)]
    VARIABLE  [reduce using rule 18 (expr)]
    '^'       [reduce using rule 18 (expr)]
    '('       [reduce using rule 18 (expr)]
    '_'       [reduce using rule 18 (expr)]
    '['       [reduce using rule 18 (expr)]
    ']'       reduce using rule 8 (stmt)
    ']'       [reduce using rule 18 (expr)]
    '$'       [reduce using rule 18 (expr)]
    $default  reduce using rule 8 (stmt)

    stmt  go to state 21
    expr  go to state 11
    note  go to state 12


state 9

   17 expr: '$' . VARIABLE

    VARIABLE  shift, and go to state 22


state 10

    1 song: song stmt . END
    2     | song stmt .

    END  shift, and go to state 23

    END       [reduce using rule 2 (song)]
    $default  reduce using rule 2 (song)


state 11

    4 stmt: expr . stmt

    NOTE      shift, and go to state 3
    VARIABLE  shift, and go to state 4
    '^'       shift, and go to state 5
    '('       shift, and go to state 6
    '_'       shift, and go to state 7
    '['       shift, and go to state 8
    '$'       shift, and go to state 9

    $end      reduce using rule 8 (stmt)
    $end      [reduce using rule 18 (expr)]
    NOTE      [reduce using rule 8 (stmt)]
    NOTE      [reduce using rule 18 (expr)]
    VARIABLE  [reduce using rule 8 (stmt)]
    VARIABLE  [reduce using rule 18 (expr)]
    END       reduce using rule 8 (stmt)
    END       [reduce using rule 18 (expr)]
    '^'       [reduce using rule 8 (stmt)]
    '^'       [reduce using rule 18 (expr)]
    '('       [reduce using rule 8 (stmt)]
    '('       [reduce using rule 18 (expr)]
    ')'       reduce using rule 8 (stmt)
    ')'       [reduce using rule 18 (expr)]
    '_'       [reduce using rule 8 (stmt)]
    '_'       [reduce using rule 18 (expr)]
    '['       [reduce using rule 8 (stmt)]
    '['       [reduce using rule 18 (expr)]
    ']'       reduce using rule 8 (stmt)
    ']'       [reduce using rule 18 (expr)]
    ';'       reduce using rule 8 (stmt)
    ';'       [reduce using rule 18 (expr)]
    '$'       [reduce using rule 8 (stmt)]
    '$'       [reduce using rule 18 (expr)]
    $default  reduce using rule 8 (stmt)

    stmt  go to state 24
    expr  go to state 11
    note  go to state 12


state 12

    9 expr: note . expr
   10     | note . '-'
   11     | note . '-' '-'
   12     | note . '-' '-' '-'

    NOTE      shift, and go to state 3
    VARIABLE  shift, and go to state 4
    '^'       shift, and go to state 16
    '('       shift, and go to state 6
    '_'       shift, and go to state 17
    '-'       shift, and go to state 25
    '$'       shift, and go to state 9

    NOTE      [reduce using rule 18 (expr)]
    VARIABLE  [reduce using rule 18 (expr)]
    '^'       [reduce using rule 18 (expr)]
    '('       [reduce using rule 18 (expr)]
    '_'       [reduce using rule 18 (expr)]
    '$'       [reduce using rule 18 (expr)]
    $default  reduce using rule 18 (expr)

    expr  go to state 26
    note  go to state 12


state 13

   16 expr: VARIABLE '=' . song ';'

    $default  reduce using rule 3 (song)

    song  go to state 27


state 14

   21 note: '^' NOTE .

    $default  reduce using rule 21 (note)


state 15

    5 stmt: '^' '(' . song ')'

    $default  reduce using rule 3 (song)

    song  go to state 28


state 16

   21 note: '^' . NOTE

    NOTE  shift, and go to state 14


state 17

   20 note: '_' . NOTE

    NOTE  shift, and go to state 19


state 18

   13 expr: '(' expr . ')' '-'
   14     | '(' expr . ')' '-' '-'
   15     | '(' expr . ')' '-' '-' '-'

    ')'  shift, and go to state 29


state 19

   20 note: '_' NOTE .

    $default  reduce using rule 20 (note)


state 20

    6 stmt: '_' '(' . song ')'

    $default  reduce using rule 3 (song)

    song  go to state 30


state 21

    7 stmt: '[' stmt . ']'

    ']'  shift, and go to state 31


state 22

   17 expr: '$' VARIABLE .

    $default  reduce using rule 17 (expr)


state 23

    1 song: song stmt END .

    $default  reduce using rule 1 (song)


state 24

    4 stmt: expr stmt .

    $default  reduce using rule 4 (stmt)


state 25

   10 expr: note '-' .
   11     | note '-' . '-'
   12     | note '-' . '-' '-'

    '-'  shift, and go to state 32

    $default  reduce using rule 10 (expr)


state 26

    9 expr: note expr .

    $default  reduce using rule 9 (expr)


state 27

    1 song: song . stmt END
    2     | song . stmt
   16 expr: VARIABLE '=' song . ';'

    NOTE      shift, and go to state 3
    VARIABLE  shift, and go to state 4
    '^'       shift, and go to state 5
    '('       shift, and go to state 6
    '_'       shift, and go to state 7
    '['       shift, and go to state 8
    ';'       shift, and go to state 33
    '$'       shift, and go to state 9

    NOTE      [reduce using rule 8 (stmt)]
    NOTE      [reduce using rule 18 (expr)]
    VARIABLE  [reduce using rule 8 (stmt)]
    VARIABLE  [reduce using rule 18 (expr)]
    END       reduce using rule 8 (stmt)
    END       [reduce using rule 18 (expr)]
    '^'       [reduce using rule 8 (stmt)]
    '^'       [reduce using rule 18 (expr)]
    '('       [reduce using rule 8 (stmt)]
    '('       [reduce using rule 18 (expr)]
    '_'       [reduce using rule 8 (stmt)]
    '_'       [reduce using rule 18 (expr)]
    '['       [reduce using rule 8 (stmt)]
    '['       [reduce using rule 18 (expr)]
    ';'       [reduce using rule 8 (stmt)]
    ';'       [reduce using rule 18 (expr)]
    '$'       [reduce using rule 8 (stmt)]
    '$'       [reduce using rule 18 (expr)]
    $default  reduce using rule 8 (stmt)

    stmt  go to state 10
    expr  go to state 11
    note  go to state 12


state 28

    1 song: song . stmt END
    2     | song . stmt
    5 stmt: '^' '(' song . ')'

    NOTE      shift, and go to state 3
    VARIABLE  shift, and go to state 4
    '^'       shift, and go to state 5
    '('       shift, and go to state 6
    ')'       shift, and go to state 34
    '_'       shift, and go to state 7
    '['       shift, and go to state 8
    '$'       shift, and go to state 9

    NOTE      [reduce using rule 8 (stmt)]
    NOTE      [reduce using rule 18 (expr)]
    VARIABLE  [reduce using rule 8 (stmt)]
    VARIABLE  [reduce using rule 18 (expr)]
    END       reduce using rule 8 (stmt)
    END       [reduce using rule 18 (expr)]
    '^'       [reduce using rule 8 (stmt)]
    '^'       [reduce using rule 18 (expr)]
    '('       [reduce using rule 8 (stmt)]
    '('       [reduce using rule 18 (expr)]
    ')'       [reduce using rule 8 (stmt)]
    ')'       [reduce using rule 18 (expr)]
    '_'       [reduce using rule 8 (stmt)]
    '_'       [reduce using rule 18 (expr)]
    '['       [reduce using rule 8 (stmt)]
    '['       [reduce using rule 18 (expr)]
    '$'       [reduce using rule 8 (stmt)]
    '$'       [reduce using rule 18 (expr)]
    $default  reduce using rule 8 (stmt)

    stmt  go to state 10
    expr  go to state 11
    note  go to state 12


state 29

   13 expr: '(' expr ')' . '-'
   14     | '(' expr ')' . '-' '-'
   15     | '(' expr ')' . '-' '-' '-'

    '-'  shift, and go to state 35


state 30

    1 song: song . stmt END
    2     | song . stmt
    6 stmt: '_' '(' song . ')'

    NOTE      shift, and go to state 3
    VARIABLE  shift, and go to state 4
    '^'       shift, and go to state 5
    '('       shift, and go to state 6
    ')'       shift, and go to state 36
    '_'       shift, and go to state 7
    '['       shift, and go to state 8
    '$'       shift, and go to state 9

    NOTE      [reduce using rule 8 (stmt)]
    NOTE      [reduce using rule 18 (expr)]
    VARIABLE  [reduce using rule 8 (stmt)]
    VARIABLE  [reduce using rule 18 (expr)]
    END       reduce using rule 8 (stmt)
    END       [reduce using rule 18 (expr)]
    '^'       [reduce using rule 8 (stmt)]
    '^'       [reduce using rule 18 (expr)]
    '('       [reduce using rule 8 (stmt)]
    '('       [reduce using rule 18 (expr)]
    ')'       [reduce using rule 8 (stmt)]
    ')'       [reduce using rule 18 (expr)]
    '_'       [reduce using rule 8 (stmt)]
    '_'       [reduce using rule 18 (expr)]
    '['       [reduce using rule 8 (stmt)]
    '['       [reduce using rule 18 (expr)]
    '$'       [reduce using rule 8 (stmt)]
    '$'       [reduce using rule 18 (expr)]
    $default  reduce using rule 8 (stmt)

    stmt  go to state 10
    expr  go to state 11
    note  go to state 12


state 31

    7 stmt: '[' stmt ']' .

    $default  reduce using rule 7 (stmt)


state 32

   11 expr: note '-' '-' .
   12     | note '-' '-' . '-'

    '-'  shift, and go to state 37

    $default  reduce using rule 11 (expr)


state 33

   16 expr: VARIABLE '=' song ';' .

    $default  reduce using rule 16 (expr)


state 34

    5 stmt: '^' '(' song ')' .

    $default  reduce using rule 5 (stmt)


state 35

   13 expr: '(' expr ')' '-' .
   14     | '(' expr ')' '-' . '-'
   15     | '(' expr ')' '-' . '-' '-'

    '-'  shift, and go to state 38

    $default  reduce using rule 13 (expr)


state 36

    6 stmt: '_' '(' song ')' .

    $default  reduce using rule 6 (stmt)


state 37

   12 expr: note '-' '-' '-' .

    $default  reduce using rule 12 (expr)


state 38

   14 expr: '(' expr ')' '-' '-' .
   15     | '(' expr ')' '-' '-' . '-'

    '-'  shift, and go to state 39

    $default  reduce using rule 14 (expr)


state 39

   15 expr: '(' expr ')' '-' '-' '-' .

    $default  reduce using rule 15 (expr)
